--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.4.0",
     "gatsby": "^4.17.2",
     "gatsby-plugin-gatsby-cloud": "^4.17.0",
     "gatsby-plugin-image": "^2.17.0",
@@ -16,6 +18,7 @@
     "gatsby-transformer-sharp": "^4.17.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0"
   },
