--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-manifest": "^4.17.0",
     "gatsby-plugin-offline": "^5.17.0",
     "gatsby-plugin-react-helmet": "^5.17.0",
+    "gatsby-plugin-sass": "^5.17.0",
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-source-filesystem": "^4.17.0",
     "gatsby-transformer-sharp": "^4.17.0",
@@ -20,7 +21,8 @@
     "react": "^18.1.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sass": "^1.53.0"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
