--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.0",
+    "dotenv": "^16.0.1",
     "gatsby": "^4.17.2",
     "gatsby-plugin-gatsby-cloud": "^4.17.0",
     "gatsby-plugin-image": "^2.17.0",
@@ -17,6 +18,7 @@
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-remark-images": "^6.17.0",
     "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-source-contentful": "^7.15.0",
     "gatsby-source-filesystem": "^4.17.0",
     "gatsby-transformer-remark": "^5.17.0",
     "gatsby-transformer-sharp": "^4.17.0",
