--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap-icons": "^1.4.0",
     "dotenv": "^16.0.1",
     "gatsby": "^4.17.2",
+    "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-gatsby-cloud": "^4.17.0",
     "gatsby-plugin-image": "^2.17.0",
     "gatsby-plugin-manifest": "^4.17.0",
