--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "gatsby-source-filesystem": "^4.17.0",
     "gatsby-transformer-remark": "^5.17.0",
     "gatsby-transformer-sharp": "^4.17.0",
+    "moment": "^2.29.3",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-moment": "^1.1.2",
     "sass": "^1.53.0"
   },
   "devDependencies": {
